--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"build:docs": "sassdoc ./src/sass/ -d ./docs/sass/",
 		"build:img": "cp -r src/img/* dist/assets/img/",
 		"build:font": "cp -r src/fonts/* dist/assets/fonts/",
-		"deploy:css": "rm -rf dist/assets/css/* && node-sass src/sass/index.scss dist/assets/css/min.css",
+		"deploy:css": "rm -rf dist/assets/css/* && node-sass --output-style compressed src/sass/index.scss dist/assets/css/min.css",
 		"deploy:js": "npm run lint:js && rm -rf src/js/ && rm -rf dist/assets/js/* && webpack --config webpack.deploy.js",
 		"deploy:img": "rm -rf dist/assets/img/* && cp -r src/img/* dist/assets/img/",
 		"deploy:font": "rm -rf dist/asset/fonts/* && cp -r src/fonts/* dist/assets/fonts",
