--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
   "name": "gyunu-boilerplate",
   "version": "1.0.0",
-  "description": "A basic webpack and sass boilerplate.",
+  "description": "A Webpack, TypeScript and Sass Boilerplate",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint:js": "rm tslint.json && tslint -indent tabs src/ts/**/*.ts",
-    "build:js": "npm run lint:js && rm -rf src/js && rm -rf dist/js && webpack --config webpack.build.js",
-    "build:css": "node-sass --output-style --source-map-root --source-map dist/assets/css/css.map src/sass/index.scss dist/assets/css/min.css",
-		"build:docs": "sassdoc ./src/sass/ -d ./docs/sass/",
-		"build:img": "cp -r src/img/* dist/assets/img/",
-		"build:font": "cp -r src/fonts/* dist/assets/fonts/",
-		"deploy:css": "rm -rf dist/assets/css/* && node-sass --output-style compressed src/sass/index.scss dist/assets/css/min.css",
-		"deploy:js": "npm run lint:js && rm -rf src/js/ && rm -rf dist/assets/js/* && webpack --config webpack.deploy.js",
-		"deploy:img": "rm -rf dist/assets/img/* && cp -r src/img/* dist/assets/img/",
-		"deploy:font": "rm -rf dist/asset/fonts/* && cp -r src/fonts/* dist/assets/fonts",
+    "lint:js": "rm tslint.json && ./node_modules/.bin/tslint -indent tabs src/ts/**/*.ts",
+    "build:js": "npm run lint:js && rm -rf src/js && rm -rf dist/assets/js && ./node_modules/.bin/webpack --config webpack.build.js",
+    "build:css": "./node_modules/.bin/node-sass --output-style --source-map-root --source-map dist/assets/css/css.map src/sass/index.scss dist/assets/css/min.css",
+    "build:img": "rm -rf dist/img && ./node_modules/.bin/imagemin src/img/* --out-dir=dist/assets/img",
+    "build:font": "mkdir -p dist/assets/fonts && cp -r src/fonts/* dist/assets/fonts/",
+    "deploy:css": "rm -rf dist/assets/css/* && ./node_modules/.bin/node-sass --output-style compressed src/sass/index.scss dist/assets/css/min.css",
+    "deploy:js": "npm run lint:js && rm -rf src/js/ && rm -rf dist/assets/js/* && ./node_modules/.bin/webpack --config webpack.deploy.js",
+    "deploy:img": "npm run build:img",
+    "deploy:font": "rm -rf dist/asset/fonts/* && cp -r src/fonts/* dist/assets/fonts",
     "live-reload": "./node_modules/.bin/webpack-dev-server --content-base './dist'",
-    "watch": "parallelshell 'npm run -s build:js -- -w' 'npm run -s build:css -- -w' 'npm run live-reload'",
-		"deploy": "npm run -s deploy:css && npm run -s deploy:js && npm run -s deploy:img && npm run -s deploy:font"
+    "watch": "parallelshell 'npm run -s build:js -- -w' 'npm run -s build:css -- -w' 'npm run ./node_modules/.bin/live-reload'",
+    "build": "npm run -s build:js && npm run -s build:css && npm run -s build:img && npm run -s build:font",
+    "purge": "rm -rf dist/assets",
+    "deploy": "npm run -s deploy:css && npm run -s deploy:js && npm run -s deploy:img && npm run -s deploy:font"
   },
   "author": "Gyunu",
   "license": "MIT",
   "dependencies": {
+    "imagemin-cli": "^3.0.0",
+    "node-sass": "^3.10.1",
     "ts-loader": "^0.8.2",
-    "node-sass": "^3.5.3",
+    "tslint": "^3.15.1",
     "typescript": "^1.8.10",
     "webpack": "^1.13.0"
   },
